--- a/SunamoParsing.csproj
+++ b/SunamoParsing.csproj
@@ -7,10 +7,10 @@
     <Description>Parsing list, basic types or more complex structures</Description>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Data\" />
