--- a/SunamoParsing.csproj
+++ b/SunamoParsing.csproj
@@ -11,14 +11,16 @@
     <RepositoryUrl>https://github.com/sunamo/SunamoParsing.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing;SunamoParsing.csproj</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoParsing;SunamoParsing.csproj</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <None Include="readme.md" Pack="True" PackagePath="." />
   </ItemGroup>
 </Project>
