Added global using of Microsoft.Extensions.Logging.Abstractions to all projects

--- a/SunamoParsing.csproj
+++ b/SunamoParsing.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <None Include="readme.md" Pack="True" PackagePath="." />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="*" Pack="True" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
